--- a/views/admin/users/users.ejs
+++ b/views/admin/users/users.ejs
@@ -16,6 +16,7 @@
             <th scope="col">Email</th>
             <th scope="col">Role</th>
             <th scope="col">Function</th>
+            <th scope="col">Store</th>
             <th scope="col">Action</th>
             <th scope="col">Delete</th>
           </tr>
@@ -28,6 +29,7 @@
                     <td><%= user.email %></td>
                     <td><%= user.role %></td>
                     <td><%= user.func %></td>
+                    <td><%= user.store.storeName %></td>
                     <td><a href="/admin/user/<%= user._id %>" class="btn btn-outline-warning">Edit</a></td>
                     <td>
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModel" id="deleteButton" data-user-name="<%= user.name %>" data-user-id="<%= user._id %>">
