--- a/views/admin/stores/storeMaterials.ejs
+++ b/views/admin/stores/storeMaterials.ejs
@@ -18,6 +18,7 @@
             <th scope="col">Acquisition Date</th>
             <th scope="col">Store</th>
             <th scope="col">Category</th>
+            <th scope="col">Used</th>
             <th scope="col">Comment</th>
             <th scope="col">Action</th>
             <th scope="col">Delete</th>
@@ -32,6 +33,7 @@
                     <td><%= material.acquisitionDate.toLocaleString('fr-FR', {day: "numeric", year: "numeric", month: "2-digit",}) %></td>
                     <td><%= material.store.storeName %></td>
                     <td><%= material.category %></td>
+                    <td><%= material.usedMaterial %></td>
                     <td><%= material.comment %></td>
                     <td>
                       <ul class="navbar-nav">
