--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -21,6 +21,9 @@
           <% if (canView) { %>
             <hr>
             <li class="nav-item">
+              <a class="nav-link <% if (url === "/admin") { %> active <% } %>" href="/admin">Dashboard</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link <% if (url === "/admin/visits") { %> active <% } %>" href="/admin/visits">Visits</a>
             </li>
             <li class="nav-item">
