--- a/views/admin/dashboard/dashboard.ejs
+++ b/views/admin/dashboard/dashboard.ejs
@@ -5,8 +5,8 @@
     <%- include('../../includes/navigation'); -%>
     <section class="d-flex flex-row flex-wrap p-2">
         <% data.forEach(element => { %>
-            <div class="card m-1" style="width: 15%;min-width: 200px;">
-                <div class="card-body">
+            <div class="card m-1" style="width: 24%;min-width: 200px; max-width: 400px;">
+                <div class="card-header text-bg-primary text-center">
                     <h5 class="card-title"><%= element.store %></h5>
                 </div>
                 <ul class="list-group list-group-flush">
@@ -14,8 +14,15 @@
                     <li class="list-group-item d-flex justify-content-between align-items-center"><b><%= material.category %>: </b><span class="badge bg-primary rounded-pill"><%= material.count %></span></li>
                     <% }) %>
                 </ul>
+                <div class="card-body"></div>
                 <div class="card-footer">
-                    <p><i>Materials State:</i></p>
+                    <p><i>Pc's State: <%= element.pcStatus.nbrGoodPc %>/<%= element.pcStatus.nbrAllPc %></i></p>
+                    <div class="progress">
+                        <div class="progress-bar  progress-bar-striped bg-<%= element.pcStatus.progressColor %>" role="progressbar" aria-label="Example with label" style="width:<%= element.pcStatus.avgGoodPcStatus %>%" aria-valuenow="<%= element.pcStatus.avgGoodPcStatus %>" aria-valuemin="0" aria-valuemax="100"><%= element.pcStatus.avgGoodPcStatus %>%</div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <p><i>Materials State: <%= element.cleanlinessFilter.goodMaterials %>/<%= element.cleanlinessFilter.nbrMaterial %></i></p>
                     <div class="progress">
                         <div class="progress-bar  progress-bar-striped bg-<%= element.cleanlinessFilter.progressColor %>" role="progressbar" aria-label="Example with label" style="width:<%= element.cleanlinessFilter.averageCleanliness %>%" aria-valuenow="<%= element.cleanlinessFilter.averageCleanliness %>" aria-valuemin="0" aria-valuemax="100"><%= element.cleanlinessFilter.averageCleanliness %>%</div>
                     </div>
